--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,20 +1,26 @@
-################### Use SMTS
-FROM smtscq-base AS builder
+################### Use the image common for both leader and worker
+FROM smtcomp-smts:common AS common
 USER root
 
 ################### Extract SMTS in run stage
-FROM satcomp-base:worker AS smts_liaison
+FROM satcomp-infrastructure:worker AS infra_worker
 USER root
+
+# Install required software for running
 RUN apt-get update \
-    && DEBIAN_FRONTEND=noninteractive apt install -y apt-utils \
-     build-essential libgmp-dev bison flex
+    && DEBIAN_FRONTEND=noninteractive apt install -y libgmp-dev
 
 WORKDIR /
 
-# Copy smts
-COPY --from=builder /SMTS SMTS
-COPY --chown=ecs-user /worker /competition
+# Copy SMTS and solver scripts
+COPY --from=common /SMTS SMTS
 
+COPY --chown=ecs-user /init_solver.sh /competition
+COPY --chown=ecs-user /worker /competition
+# COPY /cleanup /competition
+# RUN chmod +x /competition/cleanup
+COPY --chown=ecs-user /cleanup /competition
+USER ecs-user
+RUN chmod +x /competition/init_solver.sh
 RUN chmod +x /competition/worker
-COPY cleanup /competition/cleanup
 RUN chmod +x /competition/cleanup
