--- a/docker/common/Dockerfile
+++ b/docker/common/Dockerfile
@@ -7,9 +7,9 @@ RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt install -y apt-utils make cmake \
        build-essential libgmp-dev bison flex git python3
 
-ENV CMAKE_BUILD_TYPE Release
-ENV ENABLE_LINE_EDITING OFF
-ENV PARALLEL ON
+ENV CMAKE_BUILD_TYPE=Release
+ENV ENABLE_LINE_EDITING=OFF
+ENV PARALLEL=ON
 
 # Fetch and build SMTS
 RUN git clone https://github.com/usi-verification-and-security/SMTS.git --branch cube-and-conquer --single-branch
